ionos_prd/knowledgebase/bookstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: knowledgebase
  labels:
    app.kubernetes.io/instance: bookstack
    app.kubernetes.io/name: bookstack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: bookstack
      app.kubernetes.io/name: bookstack
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bookstack
        app.kubernetes.io/name: bookstack
    spec:
      containers:
        - name: bookstack
          image: production.eng.it:8433/dome/knowledgebase:1.1.0
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/bookstack/public/uploads
              name: bookstack-uploads
            - mountPath: /var/www/bookstack/storage/uploads
              name: bookstack-storage-uploads
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      volumes: 
      - name: bookstack-uploads
        persistentVolumeClaim:
          claimName: kb-bookstack-uploads-pvc
      - name: bookstack-storage-uploads
        persistentVolumeClaim:
          claimName: kb-bookstack-storage-uploads-pvc
