ionos_prd/knowledgebase/bookstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: knowledgebase
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bookstack
    app.kubernetes.io/name: bookstack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
